src/grammar/TerdParser.ts
// Generated from src/grammar/Terd.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { TerdListener } from "./TerdListener";
import { TerdVisitor } from "./TerdVisitor";


export class TerdParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly PATTERN = 3;
	public static readonly STRING = 4;
	public static readonly QUOTED_STRING = 5;
	public static readonly DQUOTED_STRING = 6;
	public static readonly SPACES = 7;
	public static readonly WS = 8;
	public static readonly RULE_command = 0;
	public static readonly RULE_executable = 1;
	public static readonly RULE_arguments = 2;
	public static readonly RULE_argument = 3;
	public static readonly RULE_option = 4;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"command", "executable", "arguments", "argument", "option",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'-'", "'--'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "PATTERN", "STRING", "QUOTED_STRING", 
		"DQUOTED_STRING", "SPACES", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(TerdParser._LITERAL_NAMES, TerdParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return TerdParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Terd.g4"; }

	// @Override
	public get ruleNames(): string[] { return TerdParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return TerdParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(TerdParser._ATN, this);
	}
	// @RuleVersion(0)
	public command(): CommandContext {
		let _localctx: CommandContext = new CommandContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, TerdParser.RULE_command);
		let _la: number;
		try {
			this.state = 29;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 11;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TerdParser.SPACES) {
					{
					this.state = 10;
					this.match(TerdParser.SPACES);
					}
				}

				this.state = 13;
				this.executable();
				this.state = 15;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TerdParser.SPACES) {
					{
					this.state = 14;
					this.match(TerdParser.SPACES);
					}
				}

				this.state = 17;
				this.match(TerdParser.EOF);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 20;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TerdParser.SPACES) {
					{
					this.state = 19;
					this.match(TerdParser.SPACES);
					}
				}

				this.state = 22;
				this.executable();
				this.state = 25;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TerdParser.SPACES) {
					{
					this.state = 23;
					this.match(TerdParser.SPACES);
					this.state = 24;
					this.arguments();
					}
				}

				this.state = 27;
				this.match(TerdParser.EOF);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public executable(): ExecutableContext {
		let _localctx: ExecutableContext = new ExecutableContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, TerdParser.RULE_executable);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 31;
			this.match(TerdParser.PATTERN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arguments(): ArgumentsContext {
		let _localctx: ArgumentsContext = new ArgumentsContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, TerdParser.RULE_arguments);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 33;
			this.argument();
			this.state = 38;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === TerdParser.SPACES) {
				{
				{
				this.state = 34;
				this.match(TerdParser.SPACES);
				this.state = 35;
				this.argument();
				}
				}
				this.state = 40;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public argument(): ArgumentContext {
		let _localctx: ArgumentContext = new ArgumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, TerdParser.RULE_argument);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 43;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case TerdParser.T__0:
			case TerdParser.T__1:
				{
				this.state = 41;
				this.option();
				}
				break;
			case TerdParser.PATTERN:
				{
				this.state = 42;
				this.match(TerdParser.PATTERN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public option(): OptionContext {
		let _localctx: OptionContext = new OptionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, TerdParser.RULE_option);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 45;
			_la = this._input.LA(1);
			if (!(_la === TerdParser.T__0 || _la === TerdParser.T__1)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 46;
			this.match(TerdParser.PATTERN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!TerdParser.__ATN) {
			TerdParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(TerdParser._serializedATN));
		}

		return TerdParser.__ATN;
	}

}

export class CommandContext extends ParserRuleContext {
	public executable(): ExecutableContext {
		return this.getRuleContext(0, ExecutableContext);
	}
	public EOF(): TerminalNode { return this.getToken(TerdParser.EOF, 0); }
	public SPACES(): TerminalNode[];
	public SPACES(i: number): TerminalNode;
	public SPACES(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(TerdParser.SPACES);
		} else {
			return this.getToken(TerdParser.SPACES, i);
		}
	}
	public arguments(): ArgumentsContext | undefined {
		return this.tryGetRuleContext(0, ArgumentsContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return TerdParser.RULE_command; }
	// @Override
	public enterRule(listener: TerdListener): void {
		if (listener.enterCommand) {
			listener.enterCommand(this);
		}
	}
	// @Override
	public exitRule(listener: TerdListener): void {
		if (listener.exitCommand) {
			listener.exitCommand(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TerdVisitor<Result>): Result {
		if (visitor.visitCommand) {
			return visitor.visitCommand(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ExecutableContext extends ParserRuleContext {
	public PATTERN(): TerminalNode { return this.getToken(TerdParser.PATTERN, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return TerdParser.RULE_executable; }
	// @Override
	public enterRule(listener: TerdListener): void {
		if (listener.enterExecutable) {
			listener.enterExecutable(this);
		}
	}
	// @Override
	public exitRule(listener: TerdListener): void {
		if (listener.exitExecutable) {
			listener.exitExecutable(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TerdVisitor<Result>): Result {
		if (visitor.visitExecutable) {
			return visitor.visitExecutable(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArgumentsContext extends ParserRuleContext {
	public argument(): ArgumentContext[];
	public argument(i: number): ArgumentContext;
	public argument(i?: number): ArgumentContext | ArgumentContext[] {
		if (i === undefined) {
			return this.getRuleContexts(ArgumentContext);
		} else {
			return this.getRuleContext(i, ArgumentContext);
		}
	}
	public SPACES(): TerminalNode[];
	public SPACES(i: number): TerminalNode;
	public SPACES(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(TerdParser.SPACES);
		} else {
			return this.getToken(TerdParser.SPACES, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return TerdParser.RULE_arguments; }
	// @Override
	public enterRule(listener: TerdListener): void {
		if (listener.enterArguments) {
			listener.enterArguments(this);
		}
	}
	// @Override
	public exitRule(listener: TerdListener): void {
		if (listener.exitArguments) {
			listener.exitArguments(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TerdVisitor<Result>): Result {
		if (visitor.visitArguments) {
			return visitor.visitArguments(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArgumentContext extends ParserRuleContext {
	public option(): OptionContext | undefined {
		return this.tryGetRuleContext(0, OptionContext);
	}
	public PATTERN(): TerminalNode | undefined { return this.tryGetToken(TerdParser.PATTERN, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return TerdParser.RULE_argument; }
	// @Override
	public enterRule(listener: TerdListener): void {
		if (listener.enterArgument) {
			listener.enterArgument(this);
		}
	}
	// @Override
	public exitRule(listener: TerdListener): void {
		if (listener.exitArgument) {
			listener.exitArgument(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TerdVisitor<Result>): Result {
		if (visitor.visitArgument) {
			return visitor.visitArgument(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class OptionContext extends ParserRuleContext {
	public PATTERN(): TerminalNode { return this.getToken(TerdParser.PATTERN, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return TerdParser.RULE_option; }
	// @Override
	public enterRule(listener: TerdListener): void {
		if (listener.enterOption) {
			listener.enterOption(this);
		}
	}
	// @Override
	public exitRule(listener: TerdListener): void {
		if (listener.exitOption) {
			listener.exitOption(this);
		}
	}
	// @Override
	public accept<Result>(visitor: TerdVisitor<Result>): Result {
		if (visitor.visitOption) {
			return visitor.visitOption(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


